--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@mantine/core": "8.0.1",
     "@mantine/hooks": "8.0.1",
     "@tabler/icons-react": "^3.33.0",
+    "markdown-to-jsx": "^7.7.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.5.3"
+    "react-router-dom": "^7.5.3",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.26.0",
