--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "private": true,
   "type": "module",
   "version": "0.0.0",
+  "homepage": "https://SKCheongBrian.github.io/personal-website",
   "scripts": {
+    "predeploy": "npm run build:gh",
+    "deploy:gh": "gh-pages -d dist",
+    "deploy:soc": "npm run build:soc && scp -r dist/* bskch@stf.comp.nus.edu.sg:~/public_html && ssh bskch@stf.comp.nus.edu.sg 'chmod -R 755 ~/public_html' && ssh bskch@stf.comp.nus.edu.sg 'find ~/public_html -type f -exec chmod 644 {} \\;'",
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build:gh": "tsc && vite build --base=/personal-website",
+    "build:soc": "tsc && vite build --base=/~bskch/",
     "preview": "vite preview",
     "typecheck": "tsc --noEmit",
     "lint": "npm run eslint && npm run stylelint",
@@ -47,6 +52,7 @@
     "eslint-config-mantine": "^4.0.3",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
+    "gh-pages": "^6.3.0",
     "identity-obj-proxy": "^3.0.0",
     "jsdom": "^26.1.0",
     "postcss": "^8.5.3",
